syntax = "proto3";
package hellosvc;

option go_package = "hellocln/contract";
//lib-type:"grpc-client"
service HelloService {
    rpc PrintHello(PrintHelloRequest) returns (PrintHelloResponse);
}

message PrintHelloRequest {
    string name = 1;
}

message PrintHelloResponse {
    string message = 1;
}